--- a/FixShader/FixShader.csproj
+++ b/FixShader/FixShader.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,6 +6,10 @@
 	<LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AssetsTools.NET" Version="2.0.12" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\uTinyRipperCore\uTinyRipperCore.csproj" />
